samples/_failures_safe/1761204331_3742e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18419f39.c: In function ‘main’:
./samples/SAFE/__tmp_18419f39.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("\n");
      |     ^~~~~~
